# eos-final-project

./: .gitignore  1.cpp  README.md  main.c
app/Arduino-Project/ESP32_Serial_Rx_Dev/src/: main.cpp
app/Arduino-Project/ESP32_WiFi_Rx/src/: main.cpp
app/Arduino-Project/ESP32_WiFi_Rx2/: platformio.ini
app/Arduino-Project/ESP32_WiFi_Rx2/src/: main.cpp
app/Arduino-Project/ESP32_WiFi_Tx/: platformio.ini
app/Arduino-Project/ESP32_WiFi_Tx/include/: Serial_Data_Transfer.hpp
app/Arduino-Project/ESP32_WiFi_Tx/src/: main.cpp
app/Arduino-Project/ESP32_WiFi_Tx2/: platformio.ini
app/Arduino-Project/ESP32_WiFi_Tx2/include/: Serial_Data_Transfer.hpp
app/Arduino-Project/ESP32_WiFi_Tx2/src/: main.cpp
app/Arduino-Project/ESP_Get_MAC/: platformio.ini
app/Arduino-Project/Serial_Tx/: platformio.ini
app/Arduino-Project/Serial_Tx/src/: main.cpp
app/Arduino-Project/WiFi_Rx/: platformio.ini
app/GUI/disply/: Attitude_Kinematics.cpp  Attitude_Kinematics.h  MyForm.h  MyForm.resx  UART.h  disply.vcxproj  packages.config
app/PC_MCU_UART/: CMakeLists.txt  README.md
app/PC_MCU_UART/include/Attitude_Kinematics/: Attitude_Kinematics.cpp  Attitude_Kinematics.h  README.md
app/PC_MCU_UART/include/UART/: UART.h
app/PC_MCU_UART/src/: main.cpp
docs/: Hardware_Init.pptx  README.md
libs/MPU9250_AHRS/: AHRS.h
libs/MPU9250_AHRS/AHRS/: AHRS.c
libs/MPU9250_AHRS/STM32_MPU9250/: README.md
libs/STM32_MPU9250/src/: STM32_MPU9250.h
project/Final/: Final Debug.launch  Final.ioc
project/Final/Core/Src/: main.c  (+1 more)
project_stm32f411ve/Final/: .cproject  .mxproject
update_files/: Attitude_Kinematics.cpp  Attitude_Kinematics.h  MyForm.h  main.c
upload/: README.md
upload/Project_ESP32/: README.md
upload/Project_ESP32/ESP32_WiFi_Tx2/: platformio.ini
upload/Project_GUI_RT_Pose_Monitor/: README.md
upload/Project_GUI_RT_Pose_Monitor/disply/: Attitude_Kinematics.cpp  Attitude_Kinematics.h  MyForm.cpp  MyForm.h  UART.h  disply.sln  disply.vcxproj  packages.config
upload/Project_RT_Pose_Monitor/: README.md
upload/Project_RT_Pose_Monitor/disply/: MyForm.resx  disply.vcxproj.filters
upload/Project_STM32F411VE/: README.md
upload/Project_STM32F411VE/Final/: .project
(+64 files in other folders)
